# wopes

./: .gitignore  LICENSE  README.md
Wopes/: .gitignore  CMakeLists.txt
Wopes/ACore/: ACore  ACore_global.h  CMakeLists.txt  _clang-format  a_core.cpp  a_core.h  acore.cmake  base.bat  main.cpp  win.bat
Wopes/ACore/ConfigFile/: ACore.cmake  ACoreBaseConfig.cmake  ACoreConfig.cmake.in  ACorePackageConfig.cmake  FindACore.cmake.in
Wopes/ACore/ConfigFile/Defination/: acore_define.h.in
Wopes/ACore/ConfigFile/cmake/: ACore.cmake  ACoreBaseConfig.cmake  ACorePackageConfig.cmake  ACoreSetting.cmake  ACoreTargets.cmake  ACoreUtil.cmake  ACoreVersionUtil.cmake
Wopes/ACore/ConfigFile/config/: ACoreConfig.cmake.in  ACoreVersion.cmake.in-1  FindACore.cmake.in  VersionInfo.rc.in
Wopes/ACore/aFileSystem/: a_abstract_dir.cpp  a_abstract_dir.h  a_dir.cpp  a_dir.h  a_file_system.cpp  a_file_system.h  a_ring_chunk_buffer-cpp  a_ring_chunk_buffer.cpp  a_ring_chunk_buffer.h
Wopes/ACore/aLock/: spin_lock.h
Wopes/ACore/aLog/: data_param.cpp  data_param.h  log_config.cpp  log_config.h  log_controller.cpp  log_controller.h  log_data_param.cpp  log_data_param.h  log_define.h  log_file.cpp  log_file.h  log_file_setting.cpp  log_file_setting.h  log_stream.cpp  log_stream.h  log_system.cpp  log_system.h
Wopes/ACore/aNetwork/: tcp_base.cpp  tcp_base.h  udp_base.cpp  udp_base.h
Wopes/ACore/aString/: a_char.cpp  a_char.h
Wopes/ACore/aUtil/: acore_define.h  internal_singleton.h  string_util.cpp  string_util.h
Wopes/ACore/net/: tcp.cpp  tcp.h
Wopes/ACore/test/: aLogTest.cpp  aLogTest.h  main.cpp
Wopes/TestLib/: CMakeLists.txt  char_chunk.cpp  char_chunk.h  main.cpp  ring_chunk.cpp  ring_chunk.h  test_class.cpp  test_class.h
Wopes/Wope/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadttest.cpp  threadttest.h
Wopes/Wope/LI/Log/: Error_log  Input_log
Wopes/Wope/WopesConfigFile/: WopesConfigPackage.cmake
doc/: .$wopes.drawio.bkp  .gitignore  Log.md  wopes.drawio
doc/draw/: .$wopes.drawio.bkp  wopes.drawio  开发日志文档.xlsx  测试样例表.xlsx
doc/zh/: FileSystem.md  Log.md  readme.md
test_dir/: testFile - 副本 - 副本.txt
